syntax = "proto3";

package hello;
option go_package = "grpc/hello";

// 消息定义
message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

// 服务定义
service Greeter {
  // RPC 方法
  rpc SayHello (HelloRequest) returns (HelloResponse) {}
}